--- a/CapAngular/src/app/componenti/domande/domande.component.scss
+++ b/CapAngular/src/app/componenti/domande/domande.component.scss
@@ -33,8 +33,12 @@ html {
 
   &:hover{
     cursor: pointer;
-    transform: scale(1.1); /* Scale the button by 10% on hover */
+    transform: scale(1.1);
 }
+}
+
+label:hover{
+  border: 2px solid rgb(74, 0, 74);
 }
 
 .timer{
