--- a/CapAngular/src/app/componenti/level/level.component.html
+++ b/CapAngular/src/app/componenti/level/level.component.html
@@ -1,29 +1,28 @@
 <div class="father">
-  <div class="card text-center shadow-lg mb-5 bg-info bg-opacity-75 rounded-4" style="width: 18rem;">
+  <div class="card text-center mb-5 rounded-4">
     <div class="card-body">
       <h5 class="card-title mb-3 fw-semibold">Select a Level</h5>
       <div class="level-selection text-start">
         <div class="mb-2 centro">
           <label>
-            <input type="radio" name="level" value="BASE" [(ngModel)]="selectedLevel" />
-            Easy
+            <input type="radio" name="level" value="BASE" checked="" [(ngModel)]="selectedLevel" />
+           <span> Easy</span>
           </label>
         </div>
-
         <div class="mb-2 centro">
           <label >
             <input type="radio" name="level" value="MEDIO" [(ngModel)]="selectedLevel" />
-            Medium
+            <span> Medium</span>
           </label>
         </div>
         <div class="mb-2 centro">
           <label>
             <input type="radio" name="level" value="DIFFICILE" [(ngModel)]="selectedLevel" />
-            Hard
+            <span> Hard</span>
           </label>
         </div>
       </div>
     </div>
-    <button class="btn btn-success mb-2 rounded-pill w-75 m-auto" (click)="startTest()">Start Test</button>
+    <button class="btn mb-2 rounded-pill w-75 m-auto fw-semibold" (click)="startTest()">Start Test</button>
   </div>
 </div>
