modifica errori login e aggiunta gif

--- a/CapAngular/src/app/componenti/login/login.component.html
+++ b/CapAngular/src/app/componenti/login/login.component.html
@@ -14,5 +14,6 @@
       <button type="submit" class="btn btn-primary" [disabled]="form.invalid"
         [ngClass]="{'btn-danger': form.invalid}">Accedi</button>
     </form>
+    <img src="../../../assets/animation/Animation - 1695925724418.gif" class= "shark" alt="Your GIF" *ngIf="hasError">
   </div>
 </div>
